update meta info from freecodecamp boilerplate text

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-timestamp.git"
+    "url": "https://github.com/AdamDTak2112/timestamper"
   },
   "bugs": {
-    "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
+    "url": "https://github.com/AdamDTak2112/timestamper/issues"
   },
-  "homepage": "https://github.com/freeCodeCamp/boilerplate-project-timestamp#readme",
-  "author": "freeCodeCamp <team@freecodecamp.org>",
+  "homepage": "https://github.com/AdamDTak2112/timestamper#readme",
+  "author": "Adam Tak <adam.tak2112@gmail.com>",
   "keywords": [
     "node",
     "express",
